# hclimente.github.io

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  .prettierignore  404.html  CLAUDE.md  _config.yml  feed.xml  index.html  package-lock.json  robots.txt  sitemap.xml
.github/workflows/: broken-links.yml  lighthouse-badger.yml
_bibliography/: papers.bib
_data/: repositories.yml  socials.yml
_news/: 20230301_join_novonordisk.md  20240113_ebm_preprint.md  20240307_capital_markets.md  20241115_promotion.md  20250429_deepgp.md  20250625_lead.md  20250701_sysbio.md  20250826_smRMR.md  20250829_smrmr.md  20251124_join_isolabs.md
_pages/: about.md  cv.md
_pages/dropdown/: index.html
_posts/: 2017-05-01-ica.md  2017-06-20-familial-breast-cancer.md  2017-06-27-heritability.md  2017-11-04-finding-similar-items.md  2023-04-03-mendelian-randomization.md  2023-05-08-data-centric-ml.md  2024-01-07-python-objects.md  2024-01-08-python-basics.md  2024-01-15-python-dicts.md  2024-01-20-python-lists.md  2024-01-26-python-functions.md  2024-02-04-python-vectors.md  2024-02-10-hardware.md  2024-02-11-python-basics.md  2024-02-11-python-quirks.md  2024-02-15-algorithms.md  2024-02-15-coding-interviews.md  2024-02-15-data-structures-algorithms.md  2024-02-15-data-structures.md  2024-02-20-python-pandas.md  2025-01-23-graphs-basics.md  2025-01-23-graphs-glossary.md  2025-01-23-graphs-linear-algebra.md  2025-01-27-graphs-random-walks.md  2025-02-09-graph-properties.md  2025-02-18-kernel-knockoffs.md  2025-02-23-graph-problems.md  2025-03-15-python-uv.md  2025-04-01-shapley.md  2025-04-14-clustering-methods.md  2025-04-14-clustering.md  2025-04-26-fixed-effects.md  2025-05-02-hf-transformers.md  2025-05-29-cross-entropy.md  2025-05-29-cross_entropy.md  2025-05-29-precision-matrix.md  2025-07-14-cross-entropy.md  2025-08-02-langchain.md  2025-08-15-graphs-biological.md  2025-08-16-rags.md  (+5 more)
assets/css/: bootstrap.min.css  main.css  (+5 more)
assets/python/2025-04-01-shapley/: main.py  pyproject.toml
assets/python/2025-05-02-hf-transformers/: main.ipynb  main.ipynb.html  main.py  pipelines.py  prepare_data.sh  project_utils.py  pyproject.toml  supplementary.ipynb  supplementary.ipynb.html  supplementary.py
assets/python/2025-05-02-hf-transformers/plotly/: umap_embeddings.html  umap_embeddings_ft-model.html
assets/python/2025-05-29-precision-matrix/: main.py  pyproject.toml
assets/python/2025-07-14-cross-entropy/: main.py  pyproject.toml
assets/python/2025-08-02-langchain/: main.py  pyproject.toml  tools.py
assets/python/2025-08-16-rags/: README.md  embedding_utils.py  main.py  pyproject.toml  rag_cli.py  rag_demo.py  rag_system.py
assets/python/2025-08-16-rags/img/: posts_umap.html
assets/python/2025-08-16-rags/plotly/: paragraphs_umap.html  posts_umap.html
blog/: index.html
books/: index.html
cv/: index.html
news/: index.html
people/: index.html
projects/: index.html
publications/: index.html
repositories/: index.html
teaching/: index.html
(+229 files in other folders)
