[project]
name = "2025-08-02-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
